--- a/templates/base.html
+++ b/templates/base.html
@@ -62,12 +62,9 @@
 <div class="container">
     <header id="site-header">
         <div class="row">
-            <div class="logo">
-                <h1><a href="{% url 'blog:index' %}"><b>Black</b> &amp; White</a></h1>        
-            </div>
             <div class="col-md-4 col-sm-5 col-xs-8">
                 <div class="logo">
-                    <h1><a href="index.html"><b>Black</b> &amp; White</a></h1>
+                <h1><a href="{% url 'blog:index' %}"><b>聪明的傻狍子</b> &amp; <br>个人博客</a></h1>
                 </div>
             </div><!-- col-md-4 -->
             <div class="col-md-8 col-sm-7 col-xs-4">
@@ -142,6 +139,9 @@
                 <p class="copyright">&copy 2017 - 采集自<a href="https://www.cssmoban.com/"
                                                         target="_blank" title="模板之家">模板之家</a>
                     - 由<a href="https://zmrenwu.com/" title="网页模板" target="_blank">追梦人物的博客</a>修改
+                    <div class="flex-center">
+                        <div><a href="http://www.miitbeian.gov.cn" target="_blank">蒙ICP备20000788号</a></div>
+                    </div>
                 </p>
             </div>
         </div>
