--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -11,7 +11,7 @@
                         <div class="entry-meta">
                             <span class="post-category"><a href="#">{{ post.category.name }}</a></span>
                             <span class="post-date"><a href="#"><time class="entry-date"  
-                                                                        datetime="{{ post.created_time }}">{{ post.created_time }}</time></a></span>                                                                    datetime="2012-11-09T23:15:57+00:00">2017年5月11日</time></a></span>
+                                                                        datetime="{{ post.created_time }}">{{ post.created_time }}</time></a></span></time></a></span>
                             <span class="post-author"><a href="#">{{ post.author }}</a></span>
                             <span class="comments-link"><a href="{{ post.get_absolute_url }}#comment-area">{{ post.comment_set.count }} 评论</a></span>
                             <span class="views-count"><a href="#">588 阅读</a></span>
