--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
                                                         target="_blank" title="模板之家">模板之家</a>
                     - 由<a href="https://zmrenwu.com/" title="网页模板" target="_blank">追梦人物的博客</a>修改
                     <div class="flex-center">
-                        <div><a href="http://www.beian.miit.gov.cn/" target="_blank">蒙ICP备20000788号</a></div>
+                        <div align="center"><a href="http://www.beian.miit.gov.cn/" target="_blank" >蒙ICP备20000788号</a></div>
                     </div>
                 </p>
             </div>
