--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -10,7 +10,7 @@
                                                                 datetime="{{ post.created_time }}">{{ post.created_time }}</time></a></span>
                         <span class="post-author"><a href="#">{{ post.author }}</a></span>
                         <span class="comments-link"><a href="{{ post.get_absolute_url }}#comment-area">{{ post.comment_set.count }} 评论</a></span>
-                        <span class="views-count"><a href="#">588 阅读</a></span>
+                        <span class="views-count"><a href="#">{{ post.views }}阅读</a></span>
                     </div>
                     </header>
                     <div class="entry-content clearfix">
@@ -29,13 +29,13 @@
 
                 {% block toc %}
                 <  {% if post.toc %}
-                <div class="widget widget-content">            
-                <h3 class="widget-title">文章目录</h3>            
-                <div class="toc">        
-                    <ul>            
-                    {{ post.toc|safe }}            
-                    </ul>            
-                </div>           
-                </div>            
+                <div class="widget widget-content">
+                <h3 class="widget-title">文章目录</h3>
+                <div class="toc">
+                    <ul>
+                    {{ post.toc|safe }}
+                    </ul>
+                </div>
+                </div>
                 {% endif %}
                 {% endblock toc %}
