--- a/templates/blog/inclusions/_categories.html
+++ b/templates/blog/inclusions/_categories.html
@@ -4,7 +4,7 @@
     <ul>
     {% for category in category_list %}
         <li>
-        <a href="{% url 'blog:category' category.pk %}">{{ category.name }} <span class="post-count"></span></a>
+        <a href="{% url 'blog:category' category.pk %}">{{ category.name }} <span class="post-count">({{ category.num_posts }})</span></a>
         </li>
     {% empty %}
         暂无分类！
