--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-5 col-xs-8">
                 <div class="logo">
-                <h1><a href="{% url 'blog:index' %}"><b>聪明的傻狍子</b> &amp; <br>个人博客</a></h1>
+                <h1><a href="{% url 'blog:index' %}"><b>生活中的教室</b> &amp; <br></a></h1>
                 </div>
             </div><!-- col-md-4 -->
             <div class="col-md-8 col-sm-7 col-xs-4">
